# port-libsodium

./: README.md  all_cves.json  test-original.sh
safe/: Cargo.toml  build.rs
safe/cabi/: libsodium.map  weak_runtime.c
safe/cabi/expected/: foundation.symbols  full.symbols  through_public_key.symbols  through_symmetric.symbols  upstream-kinds.tsv
safe/compat-reports/: .gitignore  README.md  issues.md
safe/compat-reports/dependents/: results.tsv
safe/compat-reports/dependents-rerun/: results.tsv
safe/debian/: changelog  debhelper-build-stamp  files  rules
safe/src/: kdf.rs  kx.rs  lib.rs  public_key_impl.rs  pwhash.rs  secretstream.rs  shorthash.rs  symmetric_impl.rs  upstream.rs
safe/src/abi/: types.rs
safe/src/aead/: aes256gcm.rs  chacha20poly1305.rs  mod.rs  xchacha20poly1305.rs
safe/src/auth/: hmacsha256.rs  hmacsha512.rs  hmacsha512256.rs  mod.rs
safe/src/box_api/: mod.rs
safe/src/core/: ed25519.rs  hchacha20.rs  hsalsa20.rs  mod.rs  ristretto255.rs  salsa.rs
safe/src/ffi/: helpers.rs
safe/src/foundation/: codecs.rs  core.rs  randombytes.rs  runtime.rs  utils.rs  verify.rs  version.rs
safe/src/generichash/: mod.rs
safe/src/hash/: mod.rs  sha256.rs  sha512.rs
safe/src/onetimeauth/: mod.rs  poly1305.rs
safe/src/pwhash/: argon2.rs  mod.rs  scrypt.rs
safe/src/scalarmult/: ed25519.rs  (+3 more)
safe/tests/: abi_layout.rs  abi_symbols.rs  ported_public_key.rs  ported_pwhash.rs
safe/tools/: build-deb.sh  check-symbols.sh  relink-original-objects.sh  run-dependent-matrix.sh  run-full-compat.sh  run-original-c-tests.sh  sync-upstream-interface.sh
(+38 files in other folders)
