[package]
name = "safe-libsodium"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "sodium"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
aead = "0.6.0-rc.2"
aes-gcm = "0.11.0-rc.3"
argon2 = "0.6.0-rc.8"
base64 = "0.22"
blake2 = "0.11.0-rc.5"
blake2b_simd = "1.0.4"
chacha20 = { version = "0.10.0", features = ["legacy", "xchacha"] }
chacha20poly1305 = "0.11.0-rc.3"
curve25519-dalek = "4.1.3"
libc = "0.2"
poly1305 = "0.9.0-rc.6"
scrypt = { version = "0.12.0-rc.10", features = ["mcf", "password-hash"] }
sha2 = "0.11.0"
salsa20 = "0.11.0"
siphasher = "1.0.2"
subtle = "2.6"

[build-dependencies]
cc = "1"

[profile.release]
panic = "abort"
